# miniprex

./: LICENSE  README.md
2markdown/: README.md  pyproject.toml  requirements.txt
2markdown/scripts/: curl_example.sh  langchain_example.py  requests_example.py
resource_summarizer/: README.md  main.py  pyproject.toml
resource_summarizer/resource_summarizer/: schema.py  summarizer.py
